manifest/efk/efk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    ingress.tmaxcloud.org/name: kibana
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: tmaxcloud-issuer
  name: kibana
  namespace: kube-logging
spec:
  ingressClassName: tmax-cloud
  rules:
  - host: kibana.{CUSTOM_DOMAIN_NAME}
    http:
      paths:
      - backend:
          service:
            name: kibana
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kibana.{CUSTOM_DOMAIN_NAME}
